src/test/ui/issues/issue-32782.stderr
error[E0658]: allow_internal_unstable side-steps feature gating and stability checks
  --> $DIR/issue-32782.rs:7:9
   |
LL |         #[allow_internal_unstable]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | foo!();
   | ------- in this macro invocation
   |
   = help: add #![feature(allow_internal_unstable)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
